tried grid pattern for fixing title text wrap

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -106,8 +106,11 @@ Styles for incidents dashboard
   margin-right: -15px;
 }
 #inline-radio {
-  padding-right: 35px;
+  padding-right: 0px;
   padding-left: 0px;
+}
+#radio-col {
+  padding-left: 0px !important;
 }
 .event-filter-nav {
   width: 100%;
@@ -137,6 +140,7 @@ Styles for incidents dashboard
 }
 .dashboard-title {
   float: left;
+  overflow-wrap: break-word;
 }
 .notice-me-btn {
   box-shadow: 0 0 11px #ffbe4b;
